
2017-12-20 Ron Norman <rjn@inglenet.com>

	* common.h: Add code_is to cob_report structure
	* reportio.c: Output CODE value and chop lines based on 
	              PAGE LIMIT nnn COLUMNS

2017-12-16  Ron Norman <rjn@inglenet.com>

	* numeric.c: Fix coding error in cob_decimal_get_ieee64dec

2017-10-31  Ron Norman <rjn@inglenet.com>

	* common.h: Add cob_global_exception and COB_RESET_EXCEPTION

2017-10-17  Ron Norman <rjn@inglenet.com>

	* common.h: Add flag_debug_trace to the cob_module 
	* common.c: Check flag_debug_trace to verify module
	  was compile with -debug and/or -ftrace[all] and only
	  record trace information if compiled with the option

2017-09-26  Ron Norman <rjn@inglenet.com>

	* common.c,common.h: Add code for COB_FERROR_DIV_ZERO
	  restore code to invoke 'dump' on program abort
	* numeric.c: If divide by Zero and no ON SIZE ERROR
	  then abort with COB_FERROR_DIV_ZERO

2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler, cob_set_signal): added code for SIGFPE
	  in correspondence to SIGHUP code (+ additional error message);
	  set LCOV_EXCL markers for most of the signal handling

2017-09-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: Check if file ASSIGN field has NULL address
	  and report a runtime error and return status 31

2017-08-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: moved code to cleanup modules to cob_exit_common_modules
	  and do this only once (after exit handler calls, before call cleanup)

2017-08-26  Ron Norman <rjn@inglenet.com>

	* common.c: Free the structs used to track modules on STOP RUN

2017-08-18  Ron Norman <rjn@inglenet.com>

	* common.c: Keep list of all active modules for later free of
	            memory allocated for decimal constants
	* common.c: cob_stop_run issue callbacks to free any decimal memory
	* common.c: cob_module_enter check for Recursive CALL used in the
	            wrong place. Add cob_module_global_enter routine.