@@ -1,4 +1,15 @@
 
+2017-12-20  Ron Norman <rjn@inglenet.com>
+
+	* numeric.c: Fix coding error in cob_decimal_get_ieee64dec
+	             Tidy up the cob_decimal_get/set routines
+	             The cob_decimal_get_ieee64/128dec routines
+		     now adjust the scale until the number is within
+		     the allowed max number of digits so only if the
+		     scale is out of bounds will you get an OVERFLOW
+		     and then ON SIZE ERROR
+
+
 2017-12-20 Ron Norman <rjn@inglenet.com>
 
 	* common.h: Add code_is to cob_report structure
